--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,7 +136,7 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--text-color-theme-light);
 position: relative;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link.current::after {
@@ -158,9 +158,6 @@ color: var(--accent-color--);
 .menu-link:hover,
 .menu-link:focus {
 color: var(--accent-color--);
-padding-top: 32px;
-padding-bottom: 32px;
-
 }
 
 .contact-mail {
@@ -472,7 +469,7 @@ display: flex;
 justify-content: center;
 column-gap: 10px;
 fill: #AFB1B8;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -515,7 +512,6 @@ column-gap: 30px;
  
 .clients-box {
 font-style: normal;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -528,7 +524,7 @@ justify-content: center;
 fill: #AFB1B8;
 border: 1px solid #AFB1B8;
 border-radius: 4px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -541,7 +537,7 @@ fill: var(--accent-color--);
 .clients-icon {
 width: 106px;
 height: 60px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-box:hover,
@@ -573,7 +569,7 @@ background-color: #F5F4FA;
 border-radius: 4px;
 border: 1px solid transparent;
 padding: 6px 25px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color color border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .headup_hover:hover,
@@ -614,23 +610,29 @@ box-sizing: border-box;
 box-sizing: border-box;
 }
 
+.menu-item-card:hover,
+.menu-item-card:focus {
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 .item-card {
 display: block;
 text-decoration: none;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.item-card:hover {
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-0px 4px 4px rgba(0, 0, 0, 0.06),
-1px 4px 6px rgba(0, 0, 0, 0.16);
 
+.item-card:hover .overlay,
+.item-card:focus .overlay {
+transform: translateY(0);
+transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-list-img-wrapper {
 position: relative;
 overflow: hidden;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay {
@@ -654,10 +656,6 @@ transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-list-img-wrapper:hover .overlay,
-.project-list-img-wrapper:focus .overlay {
-transform: translateY(0%);
-}
 
 
 .button {
@@ -788,6 +786,11 @@ color: #ffffff;
 margin-bottom: 9px;
 }
 
+.contact-nav:hover {
+color: #2196F3;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .contact-mail-footer {
 text-decoration: none;
 list-style: none;
@@ -798,7 +801,7 @@ letter-spacing: 0.02em;
 color: #757575;
 margin-top: 9px;
 padding: 0;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -812,7 +815,7 @@ letter-spacing: 0.02em;
 color: #757575;
 margin-top: 9px;
 padding: 0;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-mail-footer:hover,
