--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,7 +173,6 @@ letter-spacing: 0.02em;
 color: #757575;
 padding-top: 32px;
 padding-bottom: 32px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-mail-icon {
@@ -195,7 +194,7 @@ letter-spacing: 0.02em;
 color: #757575;
 padding-top: 32px;
 padding-bottom: 32px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .contact-number-icon {
@@ -524,14 +523,14 @@ justify-content: center;
 fill: #AFB1B8;
 border: 1px solid #AFB1B8;
 border-radius: 4px;
-transition: border-color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
 .clients-link:focus {
 border-color: var(--accent-color--);
 fill: var(--accent-color--);
-
 }
 
 .clients-icon {
@@ -569,7 +568,9 @@ background-color: #F5F4FA;
 border-radius: 4px;
 border: 1px solid transparent;
 padding: 6px 25px;
-transition: background-color color border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .headup_hover:hover,
@@ -613,8 +614,8 @@ box-sizing: border-box;
 .menu-item-card:hover,
 .menu-item-card:focus {
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+0px 4px 4px rgba(0, 0, 0, 0.06),
+1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .item-card {
@@ -626,7 +627,7 @@ text-decoration: none;
 .item-card:hover .overlay,
 .item-card:focus .overlay {
 transform: translateY(0);
-transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-list-img-wrapper {
@@ -784,11 +785,11 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 color: #ffffff;
 margin-bottom: 9px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-nav:hover {
 color: #2196F3;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-mail-footer {
