--- a/styles/styles.css
+++ b/styles/styles.css
@@ -609,25 +609,27 @@ gap: 30px;
 .menu-item-card {
 box-sizing: border-box;
 box-sizing: border-box;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-item-card:hover,
-.menu-item-card:focus {
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-0px 4px 4px rgba(0, 0, 0, 0.06),
-1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 
 .item-card {
 display: block;
 text-decoration: none;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-card:hover, 
+.item-card:focus {
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06),
+1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 
 .item-card:hover .overlay,
 .item-card:focus .overlay {
 transform: translateY(0);
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-list-img-wrapper {
